--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -6,12 +6,12 @@ body{
 .small-para,
 .text .child {
   color: hsl(0, 0%, 0%);
-  font-weight: 800;
+  font-weight: 1000;
 }
 
 .para.small-para {
   font-size: 14px;
-  font-weight: 800;
+  font-weight: 1000;
 }
 
 .para {
@@ -27,12 +27,13 @@ body{
 .button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
+  border-color: rgb(0,0,0);
   font-size: 20px;
 }
 
 div.text.child {
   color: rgb(0, 0, 0);
-  font-weight: 800;
+  font-weight: 1000;
   font-size: 14px;
 }
 
