--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1 1 auto;
 }
 
 .logo {
@@ -9,11 +13,19 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  justify-self: center;
 }
 
+li {
+  margin: 2%;
+}
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 10px;
+  border: 10px;
+  border-color: papayawhip;
 }
 
 a {
@@ -22,4 +34,13 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+.header .left-links {
+  justify-self: flex-start;
+  align-items: flex-start;
+}
+
+.header .right-links {
+  align-self: flex-end;
+  margin-right: 2%;
 }
