--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -23,6 +23,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin: 20px;
 }
 
 .logo {
@@ -52,7 +53,7 @@ ul {
 }
 
 li {
-  margin: 5px 5px 5px 0px;
+  margin: 5px;
 }
 
 .header .links {
