--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 10px;
+  padding: 10px;
 }
 
 .icon {
@@ -30,9 +33,24 @@ body {
   width: 42px;
   height: 42px;
   border-radius: 50%;
+  margin: 10px;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  font-size: larger;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 10px;
 }
 
 .close-button {
@@ -43,9 +61,6 @@ body {
   font-size: 16px;
   height: 24px;
   width: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 button {
