--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,17 +5,64 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex-grow: 1;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.header .left-links {
+  margin: 10px auto 10px 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.header .right-links {
+  display: flex;
+  margin: 10px 50px 10px auto;
+  gap: 10px;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  flex-direction: column;
 }
 
 img {
   width: 600px;
 }
 
+.buttons{
+  display: flex;
+  flex-direction: row;
+}
+
 button {
   font-family: Roboto, sans-serif;
   border: none;
-  border-radius: 8px;
+  border-radius: 4px;
   background: #eee;
+  margin-right: 5px;
 }
 
 input {
@@ -24,4 +71,22 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer .left-links {
+  margin: 10px auto 10px 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.footer .right-links {
+  display: flex;
+  margin: 10px 50px 10px auto;
+  gap: 10px;
 }
